[package]
name = "path_tracer"
version = "1.0.0"
authors = ["Davide Bacchet <davide.bacchet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.0"
rand = { version = "0.7", features = ["small_rng"] } # small_rng is needed for the deterministic PRNG
getopts = "0.2"
minifb = "0.12"
indicatif = "0.11"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
